--- a/translations/kangyur/translations/076-009_toh355-the_sutra_that_teaches_the_ripening_of_virtuous_and_nonvirtuous_actions.xml
+++ b/translations/kangyur/translations/076-009_toh355-the_sutra_that_teaches_the_ripening_of_virtuous_and_nonvirtuous_actions.xml
@@ -28,7 +28,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-076-009-343">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.5 <date>2023</date>
+                <edition>v 1.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -154,6 +154,9 @@
                     <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
                 </change>
                 <change who="#martina-cotter" when="2023-10-20T14:26:51.041Z" type="text-version" status="1.0.5" xml:id="UT22084-076-009-355">
+                    <desc>Added pending links.</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-20T15:22:36.505Z" type="text-version" status="1.0.6" xml:id="UT22084-076-009-356">
                     <desc>Added pending links.</desc>
                 </change>
             </revisionDesc>
@@ -377,7 +380,7 @@
                                 <foreign xml:lang="zh" type="quote">為人<hi rend="underline">緊脣</hi>從甞齊食中來</foreign> “As a human, having <hi rend="underline">tight/thin
                             lips</hi> comes from having partaken of the food of monks” (Taishō 2881, p. 1380c21–22).</note>
                         Twitchy eyes come from not providing fire to those who request it.<note place="end" xml:id="UT22084-076-009-56"> The Chinese reads <foreign xml:lang="zh" type="quote">為人赤眼從惜火光明中來</foreign> “As a human, having red eyes comes from having been stingy with
-                            fire and light” (Taishō 2881, p. 1380c22). Cf. the English translation of <ref rend="pending" target="https://read.84000.co/translation/toh354">Toh 354</ref>. </note> Being
+                            fire and light” (Taishō 2881, p. 1380c22). Cf. the English translation of <ref target="https://read.84000.co/translation/toh354">Toh 354</ref>. </note> Being
                         unable to see at dusk comes from prying out the eyes of falcons.<note place="end" xml:id="UT22084-076-009-57"> The Chinese reads <foreign xml:lang="zh" type="quote">為人<hi rend="underline">雀目</hi>從<hi rend="underline">縫鷹眼合</hi>中來</foreign> “As a human, having <hi rend="underline">poor night vision</hi> comes from <hi rend="underline">having sewn shut the eyes of hawks</hi>” (Taishō 2881, p. 1380c22–23).</note> Muteness comes from denigrating the
                         sublime Dharma. Deafness comes from being displeased while hearing the Dharma. Buck teeth come
                         from craving for marrow and bones.<note place="end" xml:id="UT22084-076-009-58"> The Chinese
@@ -485,7 +488,7 @@
                             as the Eurasian hoopoe. </note> Those who enjoy sleeping and eating will be reborn as pigs
                         in their next life. Those who enjoy colorful silk clothing will be reborn as multicolored birds.
                         Those who enjoy speaking about distressing things and joking will be reborn as parrots.<note place="end" xml:id="UT22084-076-009-89"> The Chinese reads <foreign xml:lang="zh" type="quote">憙<hi rend="underline">學人語調弄</hi>者死作鸚鵡鳥</foreign> “Those who take pleasure in <hi rend="underline">mimicking the words of
-                            others and making fun</hi> will become parrots after death” (Taishō 2881, p. 1381a27). Cf. the English translation of <ref rend="pending" target="https://read.84000.co/translation/toh354">Toh 354</ref>.</note> Those who enjoy divisive speech will be reborn as
+                            others and making fun</hi> will become parrots after death” (Taishō 2881, p. 1381a27). Cf. the English translation of <ref target="https://read.84000.co/translation/toh354">Toh 354</ref>.</note> Those who enjoy divisive speech will be reborn as
                         six-headed cobras in their next life.<note place="end" xml:id="UT22084-076-009-90"> The Chinese
                             reads <foreign xml:lang="zh" type="quote">憙讒人者死墮<hi rend="underline">蟒蛇</hi>惡毒中</foreign> “Those who take pleasure in
                             gossip will regress to being horribly poisonous <hi rend="underline">pythons</hi>” (Taishō 2881, p. 1381a28).</note>
