--- a/translations/kangyur/translations/042-003_toh62-the_questions_of_rastrapala.xml
+++ b/translations/kangyur/translations/042-003_toh62-the_questions_of_rastrapala.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-042-003-321953">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.15 <date>2023</date>
+                <edition>v 1.0.17 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -196,6 +196,12 @@
                 </change>
                 <change who="#john" when="2023-10-11T18:34:29.334Z" type="text-version" status="1.0.15" xml:id="UT22084-042-003-321997">
                     <desc>Further improvement: influences that inspire.</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.0.16" xml:id="UT22084-042-003-321998">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-23T20:21:39.047Z" type="text-version" status="1.0.17" xml:id="UT22084-042-003-321999">
+                    <desc>updated ellipsis.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -1905,7 +1911,7 @@
                         <l>Having abandoned this teaching—an accumulation of good qualities—</l>
                         <l>They always carry letters with them.<note place="end" xml:id="UT22084-042-003-292"> Boucher 2008, 234, n. 236 explains that
                                 Jñānagupta renders this sentence as “they take pleasure in acting as postal messengers for the laity,” which implies
-                                the “criticism . . . that monks have abandoned their detachment from secular concerns by acting as go-betweens for the
+                                the “criticism … that monks have abandoned their detachment from secular concerns by acting as go-betweens for the
                                 laity.”</note> {179}</l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-042-003-293"/>
@@ -7150,7 +7156,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śrāvastī</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mnyan yod</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མཉན་ཡོད།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The place where the Buddha stayed during the rainy season.</p>
                             </note>
                         </gloss>
