--- a/translations/kangyur/translations/043-006_toh69-inspiring_determination.xml
+++ b/translations/kangyur/translations/043-006_toh69-inspiring_determination.xml
@@ -35,7 +35,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-043-006-483">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.25 <date>2023</date>
+                <edition>v 1.1.27 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -239,6 +239,12 @@
                 </change>
                 <change who="#celso" when="2023-09-08T00:12:03.157Z" type="text-version" status="1.1.25" xml:id="UT22084-043-006-541">
                     <desc>Fixed an editing error at 1.99</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.1.26" xml:id="UT22084-043-006-542">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-23T20:46:33.31Z" type="text-version" status="1.1.27" xml:id="UT22084-043-006-543">
+                    <desc>updated ellipsis.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -2253,7 +2259,7 @@
                         not retain them, and will not comprehend them.<note place="end" xml:id="UT22084-043-006-297"> Tib. <foreign xml:lang="Bo-Ltn" type="quote">phyis kyang lung nod par mi byed/ ’chang bar mi byed/
                                 kun chub par mi byed de/</foreign>. Here the Narthang version omits
                                 <foreign xml:lang="Bo-Ltn" type="quote">kun chub par mi byed
-                                de/</foreign> and thus would translate as “. . . consequently they
+                                de/</foreign> and thus would translate as “…consequently they
                             will neither receive transmission of them nor retain them” (Comparative
                             Edition, p. 431). </note>
                     </p>
@@ -3582,7 +3588,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">maitreya</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">byams pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བྱམས་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The bodhisattva who became Śākyamuni’s regent and is prophesied
                                     to be the next buddha, the fifth buddha in the fortunate eon. In
                                     early Buddhism he appears as the human disciple Maitreya Tiṣya,
