--- a/translations/kangyur/translations/044-004_toh84-the_sutra_of_the_girl_vimalasraddhas_questions.xml
+++ b/translations/kangyur/translations/044-004_toh84-the_sutra_of_the_girl_vimalasraddhas_questions.xml
@@ -35,7 +35,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-044-004-382">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.11 <date>2023</date>
+                <edition>v 1.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -213,6 +213,12 @@
                 </change>
                 <change who="#celso" when="2023-09-08T00:33:55.008Z" type="text-version" status="1.0.11" xml:id="UT22084-044-004-429">
                     <desc>fixed minor typos</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.0.12" xml:id="UT22084-044-004-430">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-23T20:50:25.926Z" type="text-version" status="1.0.13" xml:id="UT22084-044-004-431">
+                    <desc>updated ellipsis.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -493,7 +499,7 @@
                         of whom wore golden jewelry. Having prostrated herself, bowing her head to
                         the feet of the Blessed One,<note place="end" xml:id="UT22084-044-004-33">
                             The Chinese version has <foreign xml:lang="zh" type="quote">至如來所頂禮佛足</foreign> (“Reaching the Thus-Gone One, she prostrated at
-                            his feet. . . ”).</note> she circumambulated him three times. Then,
+                            his feet…”).</note> she circumambulated him three times. Then,
                         after sitting down to one side before the Blessed One, she praised him with
                         these verses: <ref cRef="F.96.a" type="folio" xml:id="UT22084-044-004-342"/>
                     </p>
@@ -2459,7 +2465,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">brgya byin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བརྒྱ་བྱིན།</term>
                             <term xml:lang="zh" type="attestedSource">帝釋天</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The name of the king of the thirty-three gods, also known as
                                     Indra, who presides over the desire realm heaven called “the
                                     gods of the thirty-three.”</p>
@@ -2473,7 +2479,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">byams pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བྱམས་པ།</term>
                             <term xml:lang="zh" type="attestedSource">彌勒</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The bodhisattva who will be the next buddha in the present
                                     eon.</p>
                             </note>
@@ -2553,7 +2559,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">tshangs pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཚངས་པ།</term>
                             <term xml:lang="zh" type="attestedSource">梵天</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>One of the primary deities of the Brahmanical pantheon, Brahmā
                                     occupies an important place in Buddhism as one of two deities
                                     (the other being Śakra) that are said to have first exhorted
@@ -2693,7 +2699,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mnyan yod</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མཉན་ཡོད།</term>
                             <term xml:lang="zh" type="attestedSource">舍衛國</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The capital city of Kośala, where the Buddha spent many rainy
                                     seasons.</p>
                             </note>
